# SuperresolutionTomo

./: DLSS_INTEGRATION.md  NIS_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md
.github/workflows/: Build_and_Upload.yml  gradle.yml
common/src/main/java/io/homo/superresolution/common/: SuperResolution.java
common/src/main/java/io/homo/superresolution/common/config/: SuperResolutionConfig.java
common/src/main/java/io/homo/superresolution/common/gui/: ClothConfig.java
common/src/main/java/io/homo/superresolution/common/upscale/: AlgorithmDescriptions.java  OptimizedAlgorithmManager.java
common/src/main/java/io/homo/superresolution/common/upscale/dlss/: DLSS.java  DLSSConfig.java  DLSSCreateParams.java  DLSSEvaluateParams.java  DLSSJitterSequence.java  DLSSNative.java  DLSSPerformanceStats.java  DlssQuality.java  NgxDLSS.java  NgxNative.java  NgxRequirement.java  NgxRuntime.java  SimpleDLSS.java
common/src/main/java/io/homo/superresolution/common/upscale/dlss/enums/: DLSSFeatureFlags.java  DLSSQuality.java
common/src/main/java/io/homo/superresolution/common/upscale/nis/: NISBenchmark.java  NVIDIAImageScaling.java  NVIDIAImageScalingConfig.java  OptimizedNIS.java
common/src/main/java/io/homo/superresolution/common/upscale/nis/enums/: NISGPUArchitecture.java
common/src/main/java/io/homo/superresolution/core/: NativeLibManager.java  RenderSystems.java
common/src/main/java/io/homo/superresolution/core/graphics/: BatchRenderer.java
common/src/main/java/io/homo/superresolution/core/graphics/opengl/: GlStateCache.java  OptimizedGlState.java
common/src/main/java/io/homo/superresolution/core/graphics/shader/: ShaderCache.java
common/src/main/java/io/homo/superresolution/core/memory/: BufferPool.java
common/src/main/java/io/homo/superresolution/core/performance/: PerformanceMonitor.java
common/src/main/java/io/homo/superresolution/core/resources/: AsyncResourceLoader.java
common/src/main/resources/assets/super_resolution/lang/: en_us.json  zh_cn.json
common/src/main/resources/assets/super_resolution/natives/: PLACEHOLDER.txt
common/src/main/resources/shader/nis/: nis_scaler.comp.glsl
common/src/test/java/io/homo/superresolution/dlss/: DLSSTest.java
fabric/: build.gradle
fabric/src/main/resources/: fabric.mod.json
native/: CMakeLists.txt
native/cpp/: CMakeLists.txt
native/cpp/SRNativeDLSS/: CMakeLists.txt
native/cpp/SRNativeDLSS/include/sr/dlss/: dlss.h  sr_provider.h
native/cpp/SRNativeDLSS/src/: dlss.cpp
native/cpp/SRNativeMain/: CMakeLists.txt
native/cpp/dlss/: CMakeLists.txt  dlss_wrapper.cpp  dlss_wrapper.h
native/src/: ngx_core.h  ngx_core_ngx.cpp  ngx_core_stub.cpp  ngx_jni.cpp
script/: copy_native.py
